Dark mode color fix

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,4 +1,3 @@
-// $primary-color: #b6eb7a;
 $primary-color: #67b3e4;
 $font-color: #424242;
 $font-color-lighter: rgba(0, 0, 0, 0.4);
@@ -28,7 +27,7 @@ $valid-color: #28a745;
 }
 
 [data-theme="dark"] {
-  --primary-color: #8830df;
+  --primary-color: #67b3e4;
   --font-color: #e8eaed;
   --font-color-lighter: rgba(255, 255, 255, 0.4);
   --bg-color: #1f2d3d;
